--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Users/shanzil/Desktop/projects/codecademy/otop-club/ressources/styles.css">
+    <link rel="stylesheet" href="/otop/ressources/styles.css">
     <title>Document</title>
 </head>
 
@@ -98,8 +98,8 @@
                     <p>12.34.56.78.90</p>
                 </div>
                 <div class="social">
-                    <a href="#"><img src="/Users/shanzil/Desktop/projects/codecademy/otop-club/ressources/img/instagram.png" alt=""></a>
-                    <a href="#"><img src="/Users/shanzil/Desktop/projects/codecademy/otop-club/ressources/img/flickr.png" alt=""></a>
+                    <a href="#"><img src="/otop/ressources/img/instagram.png" alt=""></a>
+                    <a href="#"><img src="/otop/ressources/img/flickr.png" alt=""></a>
                 </div>
             </div>
             <div class="copyright">
