--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/otop/ressources/styles.css">
-    <title>Document</title>
+    <title>O-Top Club for the Photographer</title>
 </head>
 
 <body>
